--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,18 @@
   <title>JS Group Capstone</title>
 </head>
 <body>
-  Set up project
+  <header class="header" id="header">
+    <nav class="navbar">
+      <a href="#" class="brand">
+        <img src="" alt="Logo" id="logo">
+        <span class="brand-name">Characters of Game Of Thrones</span>
+      </a>
+      <nav class="navs">
+        <a href="#" class="navlink" id="throne-stars">Characters()</a> 
+        <a href="#" class="navlink">Continents</a> 
+        <a href="#" class="navlink">Family</a> 
+      </nav>
+    </nav>
+  </header>
 </body>
 </html>
