--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
       <a href="#" class="brand">
         <img src="" alt="Logo" id="logo">
-        <span class="brand-name">Characters of Game Of Thrones</span>
+        <span class="brand-name">The Warriors</span>
       </a>
       <nav class="navs">
         <a href="#" class="navlink" id="throne-stars">Characters()</a> 
@@ -19,7 +19,7 @@
       </nav>
     </nav>
   </header>
-  <main></main>
+  <main id="contain"></main>
   <footer>
     CopyRight Henary & Eric 2023
   </footer>
